Major changes to styling of the code
Made a really cool header and welcome page. I hope someone could help me with front end coding

--- a/frontend/src/Styling_Pages/Private_Pages/Link_Account.css
+++ b/frontend/src/Styling_Pages/Private_Pages/Link_Account.css
@@ -1,8 +1,9 @@
-body {
+.link-account-body {
   background: linear-gradient(to bottom, #B3C8C2, #A1B6BC);
   color: white;
   font-family: Arial, sans-serif;
 }
+
 
 .link-account {
   height: 100vh;
