--- a/frontend/src/Styling_Pages/Private_Pages/Stock_Watchlist.css
+++ b/frontend/src/Styling_Pages/Private_Pages/Stock_Watchlist.css
@@ -1,8 +1,65 @@
 .stock-watchlist {
     background-color: black;
+    display: grid;
+    grid-template-columns: 2fr 2fr; /* Adjust this to allocate more space to the second column */
+    padding: 70px;
+    gap: 20px;
+    color:aliceblue;
+}
+
+.stock-watchlist .chart-container {
+    height: 500px;
+    width: 900px;
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.15);
+    background: lightgray 0% 0% / 100px 100px repeat, radial-gradient(146.13% 118.42% at 50% -15.5%, rgba(255, 255, 255, 0.08) 0%, rgba(255, 255, 255, 0.00) 99.59%), linear-gradient(180deg, rgba(46, 51, 90, 0.00) 0%, rgba(28, 27, 51, 0.10) 100%);
+    box-shadow: 0px 00px 400px 0px rgba(204, 215, 255, 0.174) inset, 0px 5px 10px 0px rgba(0, 0, 0, 0.05), 0px 15px 30px 0px rgba(0, 0, 0, 0.05), 0px 30px 60px 0px rgba(0, 0, 0, 0.10);
+    backdrop-filter: blur(10px);
+}
+
+.centered-content h1, .centered-content h2 {
     color: white;
-  }
-  .chart-container {
+}
+.stock-watchlist {
+    background-color: black;
+}
+
+.stock-name-header {
+    text-align: left;
+    margin-bottom: 6px; /* adjust as needed */
+    color: white;
+    margin-top: 7px;
+}
+
+.price-header {
+    text-align: left;
+    margin-top: 0px; /* adjust as needed */
+    color: white;
+    color: green;
+}
+
+.blur-effect {
+    position: absolute;
+    top: 10%; /* Adjust this to move the blur effect vertically */
+    left: 10%; /* Adjust this to move the blur effect horizontally */
+    width: 807px; /* Adjust this to change the width of the blur effect */
+    height: 807px; /* Adjust this to change the height of the blur effect */
+    border-radius: 807px;
+    filter: blur(200px);
+    z-index: 0; /* This will put the blur effect above the background but still behind the content */
+    flex-shrink: 0;
+}
+
+.search-container {
+    position: relative;
+}
+
+.dropdown-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
     width: 100%;
-    height: 100%;
-  }
+    background-color: #fff;
+    border: 1px solid #ccc;
+    z-index: 1;
+}
