--- a/frontend/src/Styling_Pages/Public_Pages/Test_Grid.css
+++ b/frontend/src/Styling_Pages/Public_Pages/Test_Grid.css
@@ -1,31 +1,59 @@
-.parent-container {
-  width: 100vw;
-  height: 200vh;
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(0, 0, 0);
-  
-}
+
 
 .grid-container {
   width: calc(100vw - 56px - 17px); /* viewport width minus sidebar width and scrollbar width */
-  height: calc(100vh - 63px); /* viewport height minus header height */
+  height: calc(1000vh - 63px); /* viewport height minus header height */
   margin-left: 56px; /* left margin equal to sidebar width */
   margin-top: 63px;
   background-color: rgb(189, 194, 199);
   display: flex;
+  flex-direction: column; /* Stack children vertically */
   align-items: flex-start; /* Align items to the start of the cross axis */
   justify-content: flex-start; /* Align items to the start of the main axis */
   overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
-.inner-box {
+.header-info{
+  width: 60%; /* Full width minus left margin */
+  height: 100px;
+  margin-left: 50px;
+  background-color: rgb(49, 163, 43);
+  color: white;
   display: flex;
-  
-  width: 1000px;
-  height: 75%;
-  background-color: red;
+  justify-content: center;
+  align-items: center;
 }
+
+.stock-and-widgets {
+  display: flex; /* Place children side by side */
+  width: calc(100% - 50px); /* Full width minus left margin */
+  margin-left: 50px;
+  height: 450px;
+  align-items: stretch; /* Stretch children to parent height */
+}
+
+.stock-watchlist {
+  display: flex;
+  width: 60%; /* Half of parent width */
+  background-color: rgb(255, 0, 200);
+}
+
+.analytics-widgets {
+  display: flex;
+  width: 40%; /* Half of parent width */
+  background-color: rgb(0, 255, 200);
+  margin-right: 20px;
+}
+
+
+
+.my-portfolio {
+  width: calc(70% - 50px); /* Full width minus left margin */
+  margin-left: 50px;
+  height: 150px; /* Adjust as needed */
+  background-color: rgb(255, 255, 255); /* Adjust as needed */
+}
+
 
 .grid-container-2 {
   width: calc(100vw - 56px - 17px); /* viewport width minus sidebar width and scrollbar width */
