--- a/frontend/src/Styling_Pages/Private_Pages/Watchlist.css
+++ b/frontend/src/Styling_Pages/Private_Pages/Watchlist.css
@@ -1,4 +1,12 @@
-
+.watchlist-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 100%;
+  background-color: black;
+ /* Ensure the container is behind other content */
+}
 
 .grid-container {
     width: calc(100vw - 56px - 17px); /* viewport width minus sidebar width and scrollbar width */
@@ -17,12 +25,6 @@
 
 
 
-
-
-
-
-
-
   
   .header-search-container {
     display: flex; /* Place children side by side */
@@ -31,7 +33,7 @@
     align-items: stretch; /* Stretch children to parent height */
     margin-left: inherit; /* Inherit left margin from parent */
     margin-right: inherit; /* Inherit right margin from parent */
-    background-color: bisque;
+  
   }
   
   .header-info {
@@ -40,6 +42,7 @@
     background-color: rgb(49, 163, 43); /* Adjust the color as needed */
     color: white;
     margin: 0;
+    margin-left: 0;
     align-items: left;
     justify-content: flex-start; /* Align text to the left */
     padding: 10px; /* Add padding */
@@ -48,7 +51,7 @@
   .search-bar {
     display: flex;
     width: 40%; /* 40% of parent width */
-    background-color: rgb(132, 35, 35); /* Adjust the color as needed */
+ /* Adjust the color as needed */
     align-items: center;
     position: relative; /* Add this to position the dropdown relative to the search bar */
   }
@@ -97,12 +100,16 @@
     width: calc(100% - 50px); /* Full width minus left margin */
     height: 450px;
     align-items: stretch; /* Stretch children to parent height */
+    margin-left: 56;
+
   }
   
   .stock-watchlist {
     display: flex;
     width: 60%; /* Half of parent width */
-    background-color: rgb(255, 0, 200);
+    background-color: rgb(0, 0, 0);
+    margin: 0;
+    padding: 7px;
   }
   
   .analytics-widgets {
@@ -110,6 +117,17 @@
     width: 40%; /* Half of parent width */
     background-color: rgb(0, 255, 200);
     margin-right: 20px;
+  }
+
+  .watchlist-settings{
+    display: flex;
+    width: 100%;
+    height: 50px;
+    background-color: rgb(214, 137, 137);
+    color: white;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
   }
   
   
@@ -126,7 +144,7 @@
     width: calc(100vw - 56px - 17px); /* viewport width minus sidebar width and scrollbar width */
     height: calc(100vh - 63px); /* viewport height minus header height */
     margin-left: 56px; /* left margin equal to sidebar width */
-    background-color: rgb(255, 0, 0); /* Different background color */
+    background-color: rgb(47, 11, 11); /* Different background color */
     display: flex;
     align-items: center;
     justify-content: center;
