--- a/frontend/src/Styling_Pages/Static_Elements/Stock_Line_Graph.css
+++ b/frontend/src/Styling_Pages/Static_Elements/Stock_Line_Graph.css
@@ -1,6 +1,6 @@
 .chart-container {
     width: 100%;
-    height: 400px;
+    height: 100%;
     margin: 0 auto;
     display: flex;
     justify-content: center;
@@ -11,8 +11,16 @@
     box-shadow: 0px 00px 400px 0px rgba(204, 215, 255, 0.174) inset, 0px 5px 10px 0px rgba(0, 0, 0, 0.05), 0px 15px 30px 0px rgba(0, 0, 0, 0.05), 0px 30px 60px 0px rgba(0, 0, 0, 0.10);
     backdrop-filter: blur(10px);
     box-sizing: border-box;
+    
+
 }
 
 .chart {
     flex-shrink: 1;
+}
+
+.button {
+    font-size: 12px; /* Adjust as needed */
+    padding: 600px; /* Adjust as needed */
+    
 }
