--- a/frontend/src/Styling_Pages/Static_Elements/Stock_Line_Graph.css
+++ b/frontend/src/Styling_Pages/Static_Elements/Stock_Line_Graph.css
@@ -1,8 +1,10 @@
 .chart-container {
+    position: relative;
     width: 100%;
     height: 100%;
     margin: 0 auto;
     display: flex;
+    flex-direction: column; /* Add this */
     justify-content: center;
     align-items: center;
     border-radius: 10px;
@@ -11,16 +13,27 @@
     box-shadow: 0px 00px 400px 0px rgba(204, 215, 255, 0.174) inset, 0px 5px 10px 0px rgba(0, 0, 0, 0.05), 0px 15px 30px 0px rgba(0, 0, 0, 0.05), 0px 30px 60px 0px rgba(0, 0, 0, 0.10);
     backdrop-filter: blur(10px);
     box-sizing: border-box;
-    
-
 }
 
-.chart {
-    flex-shrink: 1;
+.chart-wrapper {
+    width: 100%;
+    height: 90%; /* Adjust as needed */
+}
+
+.button-wrapper {
+    width: 100%;
+    height: 10%; /* Adjust as needed */
+    padding: 20px; /* Increase this to move the buttons down */
 }
 
 .button {
-    font-size: 12px; /* Adjust as needed */
-    padding: 600px; /* Adjust as needed */
+    color: rgb(255, 255, 255);
+    margin-right: 20px; /* Add this to add space between the buttons */
+    font-size: 13px;
     
+}
+
+.button:hover {
+    cursor: pointer; /* Changes the cursor to a pointer when hovering over the element */
+    color: blue; /* Change this to the color you want */
 }
