--- a/frontend/src/Styling_Pages/Static_Elements/Stock_Line_Graph.css
+++ b/frontend/src/Styling_Pages/Static_Elements/Stock_Line_Graph.css
@@ -10,7 +10,7 @@
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.15);
     background: rgb(0, 0, 0) 0% 0% / 100px 100px repeat, radial-gradient(146.13% 118.42% at 50% -15.5%, rgba(255, 255, 255, 0.08) 0%, rgba(255, 255, 255, 0.00) 99.59%), linear-gradient(180deg, rgba(46, 51, 90, 0.00) 0%, rgba(28, 27, 51, 0.10) 100%);
-    box-shadow: 0px 00px 400px 0px rgba(204, 215, 255, 0.174) inset, 0px 5px 10px 0px rgba(0, 0, 0, 0.05), 0px 15px 30px 0px rgba(0, 0, 0, 0.05), 0px 30px 60px 0px rgba(0, 0, 0, 0.10);
+    box-shadow: 40px 40px 400px 40px rgba(204, 215, 255, 0.174) inset, 0px 5px 10px 0px rgba(0, 0, 0, 0.05), 0px 15px 30px 0px rgba(0, 0, 0, 0.05), 0px 30px 60px 0px rgba(0, 0, 0, 0.10);
     backdrop-filter: blur(10px);
     box-sizing: border-box;
 }
@@ -28,6 +28,7 @@
 
 .button {
     color: rgb(255, 255, 255);
+    margin-left: 5px;
     margin-right: 20px; /* Add this to add space between the buttons */
     font-size: 13px;
     
