--- a/frontend/src/Styling_Pages/Private_Pages/Watchlist.css
+++ b/frontend/src/Styling_Pages/Private_Pages/Watchlist.css
@@ -21,66 +21,13 @@
     overflow-x: hidden; /* Prevent horizontal scrolling */
   }
 
-
-
-
-
-  
-  .header-search-container {
-    display: flex; /* Place children side by side */
-    width: calc(100% - 50px); /* Full width minus left margin */
-    height: 100px; /* Adjust the height as needed */
-    align-items: stretch; /* Stretch children to parent height */
-    margin-left: inherit; /* Inherit left margin from parent */
-    margin-right: inherit; /* Inherit right margin from parent */
-  
-  }
-  
-  .header-info {
-    display: flex;
-    width: 60%; /* 60% of parent width */
-    background-color: rgb(49, 163, 43); /* Adjust the color as needed */
-    color: white;
-    margin: 0;
-    margin-left: 0;
-    align-items: left;
-    justify-content: flex-start; /* Align text to the left */
-    padding: 10px; /* Add padding */
-  }
-  
   .search-bar {
-    display: flex;
-    width: 40%; /* 40% of parent width */
- /* Adjust the color as needed */
-    align-items: center;
-    position: relative; /* Add this to position the dropdown relative to the search bar */
-  }
-  
-  .search-bar input {
-    width: 100%; /* Full width of .search-bar */
-    padding: 10px;
-    font-size: 16px;
-    border-radius: 4px;
-    border: 1px solid #fffefe;
-  }
-  
-  .search-dropdown {
-    position: absolute;
-    top: 100%; /* Position the dropdown below the search bar */
-    width: 100%; /* Full width of .search-bar */
-    max-height: 200px;
-    overflow-y: auto; /* Add this to enable scrolling if the content exceeds max-height */
-    background-color: #fff; /* Add a background color to make the dropdown visible */
-    z-index: 1; /* Add this to make the dropdown appear above other elements */
-  }
-  .search-item {
-    padding: 10px;
-    cursor: pointer;
-  }
-  
-  .search-item:hover {
-    background-color: #ddd;
-  }
+    position: relative;
+    margin-left: auto;
+    z-index: 1000; /* any high number to bring the element to the front */
+}
+
+
 
 
 
@@ -107,9 +54,9 @@
   .stock-watchlist {
     display: flex;
     width: 62%; /* Half of parent width */
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 32, 32);
     margin: 0;
-    padding: 7px;
+    padding: 2px;
   }
   
   .analytics-widgets {
