--- a/frontend/src/Styling_Pages/Static_Elements/Stock_Line_Graph.css
+++ b/frontend/src/Styling_Pages/Static_Elements/Stock_Line_Graph.css
@@ -1,10 +1,59 @@
 .chart-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+
+.chart-header {
+    width: 100%;
+    text-align: center;
+    font-size: 24px;
+    color: #ffffff;
+    margin-bottom: 20px;
+}
+
+.price-info {
+    /* Styles for the price info container */
+    color: white;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+}
+
+.stock-name {
+    /* Styles for the stock name */
+    color: white;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+}
+
+.current-price {
+    /* Styles for the current price */
+    color: white;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+}
+
+.price-change {
+    /* Styles for the price change */
+    color: white;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+}
+
+.chart-content {
     position: relative;
     width: 100%;
     height: 100%;
     margin: 0 auto;
     display: flex;
-    flex-direction: column; /* Add this */
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 10px;
@@ -17,12 +66,12 @@
 
 .chart-wrapper {
     width: 100%;
-    height: 90%; /* Adjust as needed */
+    height: 93%; /* Adjust as needed */
 }
 
 .button-wrapper {
     width: 100%;
-    height: 10%; /* Adjust as needed */
+    height: 7%; /* Adjust as needed */
     padding: 20px; /* Increase this to move the buttons down */
 }
 
@@ -31,10 +80,21 @@
     margin-left: 5px;
     margin-right: 20px; /* Add this to add space between the buttons */
     font-size: 13px;
-    
 }
 
 .button:hover {
     cursor: pointer; /* Changes the cursor to a pointer when hovering over the element */
-    color: blue; /* Change this to the color you want */
+    color: blue; /* Use the CSS variable for the color */
+}
+
+.button:active {
+    transform: none;
+}
+
+.button.positive {
+    color: green;
+}
+
+.button.negative {
+    color: red;
 }
