--- a/frontend/src/Styling_Pages/Private_Pages/Watchlist.css
+++ b/frontend/src/Styling_Pages/Private_Pages/Watchlist.css
@@ -1,3 +1,8 @@
+:root {
+  --sidebar-width: 56px;
+  --right-margin: 20px; /* Adjust as needed */
+}
+
 .watchlist-container {
   position: absolute;
   top: 0;
@@ -5,95 +10,77 @@
   width: 100%;
   min-height: 100%;
   background-color: black;
- /* Ensure the container is behind other content */
 }
 
 .grid-container {
-    width: calc(100vw - 56px - 17px); /* viewport width minus sidebar width and scrollbar width */
-    height: calc(1000vh - 63px); /* viewport height minus header height */
-    margin-left: 56px; /* left margin equal to sidebar width */
-    margin-top: 63px;
-    background-color: rgb(0, 0, 0);
-    display: flex;
-    flex-direction: column; /* Stack children vertically */
-    align-items: flex-start; /* Align items to the start of the cross axis */
-    justify-content: flex-start; /* Align items to the start of the main axis */
-    overflow-x: hidden; /* Prevent horizontal scrolling */
-  }
-
-  .search-bar {
-    position: relative;
-    margin-left: auto;
-    z-index: 1000; /* any high number to bring the element to the front */
+  width: calc(100% - var(--sidebar-width) - var(--right-margin));
+  height: calc(100vh - 63px);
+  margin-left: var(--sidebar-width);
+  margin-top: 63px;
+  background-color: rgb(0, 0, 0);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  box-sizing: border-box;
+  max-width: 1600px; /* Adjust as needed */
+  margin-right: var(--right-margin); /* Right margin from variable */
 }
 
 
 
+.stock-and-widgets {
+  display: flex;
+  width: calc(100% - var(--sidebar-width));
+  height: 470px;
+  align-items: stretch;
+  margin-left: var(--sidebar-width);
+}
 
+.stock-watchlist {
+  display: flex;
+  width: 62%;
+  background-color: rgb(0, 0, 0);
+  margin: 0;
+  padding: 2px;
+}
 
+.analytics-widgets {
+  display: flex;
+  width: 38%;
+  background-color: rgb(52, 96, 86);
+  margin-right: var(--right-margin);
+}
 
+.watchlist-settings {
+  display: flex;
+  width: 100%;
+  height: 50px;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+}
 
+.my-portfolio {
+  width: calc(70% - var(--sidebar-width));
+  margin-left: var(--sidebar-width);
+  height: 150px;
+  background-color: rgb(0, 0, 0);
+}
 
-
-
-
-
-
-
-
-
-  .stock-and-widgets {
-    display: flex; /* Place children side by side */
-    width: calc(100% - 50px); /* Full width minus left margin */
-    height: 470px;
-    align-items: stretch; /* Stretch children to parent height */
-    margin-left: 56;
-
+@media screen and (min-width: 1600px) {
+  .grid-container {
+    width: calc(100% - var(--sidebar-width) - var(--right-margin) - 20px); /* Additional space for large screens */
+    margin-left: var(--sidebar-width);
+    margin-right: 20px; /* Increased right margin for large screens */
   }
-  
-  .stock-watchlist {
-    display: flex;
-    width: 62%; /* Half of parent width */
-    background-color: rgb(255, 32, 32);
-    margin: 0;
-    padding: 2px;
-  }
-  
-  .analytics-widgets {
-    display: flex;
-    width: 38%; /* Half of parent width */
-    background-color: rgb(0, 255, 200);
-    margin-right: 20px;
-  }
+}
 
-  .watchlist-settings{
-    display: flex;
-    width: 100%;
-    height: 50px;
-    background-color: rgb(214, 137, 137);
-    color: white;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 20px;
+@media screen and (max-width: 1599px) {
+  .grid-container {
+    width: calc(100% - var(--sidebar-width));
+    margin-left: var(--sidebar-width);
+    margin-right: 0; /* No extra right margin for smaller screens */
   }
-  
-  
-  
-  .my-portfolio {
-    width: calc(70% - 50px); /* Full width minus left margin */
-    margin-left: 50px;
-    height: 150px; /* Adjust as needed */
-    background-color: rgb(255, 255, 255); /* Adjust as needed */
-  }
-  
-  
-  .grid-container-2 {
-    width: calc(100vw - 56px - 17px); /* viewport width minus sidebar width and scrollbar width */
-    height: calc(100vh - 63px); /* viewport height minus header height */
-    margin-left: 56px; /* left margin equal to sidebar width */
-    background-color: rgb(47, 11, 11); /* Different background color */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow-x: hidden; /* Prevent horizontal scrolling */
-  }
+}
