changed frontend to handle backend changes in the API
Inconvinence in updating the frontend because I have to delete the node modules and then redownload them. So I am only commiting like once every two weeks from now on

--- a/frontend/src/Styling_Pages/Private_Pages/Watchlist.css
+++ b/frontend/src/Styling_Pages/Private_Pages/Watchlist.css
@@ -9,7 +9,7 @@
   left: 0;
   width: 100%;
   min-height: 100%;
-  background-color: black;
+  background-color: rgb(0, 0, 0);
 }
 
 .grid-container {
@@ -46,9 +46,9 @@
 
 .analytics-widgets {
   display: flex;
-  width: 38%;
-  background-color: rgb(70, 41, 41);
+  flex: 1; /* This will make the element take up the remaining space */
   margin-right: var(--right-margin);
+  
 }
 
 .watchlist-settings {
