--- a/frontend/src/Styling_Pages/Static_Elements/Stock_Line_Graph.css
+++ b/frontend/src/Styling_Pages/Static_Elements/Stock_Line_Graph.css
@@ -3,13 +3,14 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
+    background-color: aquamarine;
 }
 
 .chart-header {
     width: 100%;
     text-align: center;
     font-size: 24px;
-    color: #ffffff;
+    color: #c92828;
     margin-bottom: 20px;
 }
 
@@ -95,6 +96,7 @@
     justify-content: flex-start;
     align-items: center;
     width: 100%;
+    
 
     
 }
