--- a/frontend/src/Styling_Pages/Private_Pages/Watchlist.css
+++ b/frontend/src/Styling_Pages/Private_Pages/Watchlist.css
@@ -1,54 +1,71 @@
 :root {
   --sidebar-width: 56px;
-  --right-margin: 20px; /* Adjust as needed */
+  --right-margin: 0; /* Adjust as needed */
+  --right-margin-content: 20px;
 }
 
+
+
 .watchlist-container {
+  position: relative;
+  width: 100%;
+  height: 100vh; /* Full viewport height */
+  background-color: rgb(0, 0, 0);
+  background-image: url('/src/Styling_Pages/Public_Pictures/Circle_Blur2.png'), url('/src/Styling_Pages/Public_Pictures/Circle_Blur1.png');
+  background-size: 160%, 130%;
+  background-attachment: fixed;
+  background-repeat: no-repeat, no-repeat;
+  background-position: center, center;
+  
+}
+
+.content {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  min-height: 100%;
-  background-color: rgb(0, 0, 0);
+  height: 100%;
+  overflow-y: auto; /* Scroll only for the content */
+  box-sizing: border-box;
+  
 }
 
 .grid-container {
-  width: calc(100% - var(--sidebar-width) - var(--right-margin));
-  height: calc(100vh - 63px);
+  width: calc(100% - var(--sidebar-width));
   margin-left: var(--sidebar-width);
-  margin-top: 63px;
-  background-color: rgb(0, 0, 0);
+  background-color: transparent;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   box-sizing: border-box;
-  max-width: 1600px; /* Adjust as needed */
-  margin-right: var(--right-margin); /* Right margin from variable */
+  padding-right: var(--right-margin); /* Ensure content doesn't overlap scrollbar */
+  margin-top: 77px;
+
 }
-
-
 
 .stock-and-widgets {
   display: flex;
-  width: calc(100% - var(--sidebar-width));
+  width: 98%;
   height: 470px;
   align-items: stretch;
-  margin-left: var(--sidebar-width);
 }
 
 .stock-watchlist {
   display: flex;
   width: 62%;
-  background-color: rgb(0, 0, 0);
+  background-color: transparent;
   margin: 0;
   padding: 2px;
+  margin-left: 3%;
 }
 
 .analytics-widgets {
   display: flex;
-  flex: 1; /* This will make the element take up the remaining space */
-  margin-right: var(--right-margin);
-  
+  flex: 1;
+  background-color: transparent;
+  margin-top: 40px;
+  margin-right: var(--right-margin-content);
+  width: 95%;
 }
 
 .watchlist-settings {
@@ -66,14 +83,13 @@
   width: calc(70% - var(--sidebar-width));
   margin-left: var(--sidebar-width);
   height: 150px;
-  background-color: rgb(0, 0, 0);
 }
 
 @media screen and (min-width: 1600px) {
   .grid-container {
-    width: calc(100% - var(--sidebar-width) - var(--right-margin) - 20px); /* Additional space for large screens */
+    width: calc(100% - var(--sidebar-width));
     margin-left: var(--sidebar-width);
-    margin-right: 20px; /* Increased right margin for large screens */
+    margin-right: 0;
   }
 }
 
@@ -81,6 +97,10 @@
   .grid-container {
     width: calc(100% - var(--sidebar-width));
     margin-left: var(--sidebar-width);
-    margin-right: 0; /* No extra right margin for smaller screens */
+    margin-right: 0;
   }
+}
+
+.inner-box2, .inner-box3 {
+  width: 100%;
 }
