--- a/frontend/src/Styling_Pages/Private_Pages/Watchlist.css
+++ b/frontend/src/Styling_Pages/Private_Pages/Watchlist.css
@@ -12,11 +12,17 @@
   height: 100vh; /* Full viewport height */
   background-color: rgb(0, 0, 0);
   background-image: url('/src/Styling_Pages/Public_Pictures/Circle_Blur2.png'), url('/src/Styling_Pages/Public_Pictures/Circle_Blur1.png');
-  background-size: 160%, 130%;
+  background-size: 170%, 130%;
   background-attachment: fixed;
   background-repeat: no-repeat, no-repeat;
   background-position: center, center;
-  
+  /*background-image: url('/src/Styling_Pages/Public_Pictures/Circle_Blur2.png'), url('/src/Styling_Pages/Public_Pictures/Circle_Blur3.png');
+  background-size: 250%, 130%;
+  background-attachment: fixed;
+  background-repeat: no-repeat, no-repeat;
+  background-position: center, center;
+  flex-direction: column;
+  */
 }
 
 .content {
@@ -45,7 +51,7 @@
 
 .stock-and-widgets {
   display: flex;
-  width: 98%;
+  width: 100%;
   height: 470px;
   align-items: stretch;
 }
@@ -56,14 +62,14 @@
   background-color: transparent;
   margin: 0;
   padding: 2px;
-  margin-left: 3%;
+  margin-left: var(--sidebar-width);
 }
 
 .analytics-widgets {
   display: flex;
   flex: 1;
   background-color: transparent;
-  margin-top: 40px;
+  margin-top: 55px;
   margin-right: var(--right-margin-content);
   width: 95%;
 }
@@ -80,9 +86,12 @@
 }
 
 .my-portfolio {
-  width: calc(70% - var(--sidebar-width));
+  margin-top: 2%;
+  width: 62%;
   margin-left: var(--sidebar-width);
-  height: 150px;
+  padding: 2px;
+  height: auto;
+  background-color: transparent;
 }
 
 @media screen and (min-width: 1600px) {
@@ -101,6 +110,28 @@
   }
 }
 
+
+.company-profile{
+  padding-top: 1%;
+  display: flex;
+  width: 62%;
+  background-color: transparent;
+  margin: 0;
+  margin-left: var(--sidebar-width);
+  overflow-x:hidden;
+
+}
+
+.key-metrics{
+  padding-top: 1%;
+  display: flex;
+  width: 62%;
+  background-color: transparent;
+  margin: 0;
+  margin-left: var(--sidebar-width);
+  overflow-x:hidden;
+
+}
 .inner-box2, .inner-box3 {
   width: 100%;
 }
