--- a/frontend/src/Styling_Pages/Static_Elements/Sidebar.css
+++ b/frontend/src/Styling_Pages/Static_Elements/Sidebar.css
@@ -1,6 +1,5 @@
-/*withdh is 56px*/
 .sidebar {
-    width: 15px;
+    width: 15px; /* Revert to the original sidebar width */
     height: calc(100vh - 75px);
     position: fixed;
     left: 0;
@@ -8,13 +7,11 @@
     backdrop-filter: blur(10px); /* Apply a blur effect to the background */
     color: #fff;
     padding: 20px;
-    transition: width 0.5s;
+    transition: width 0.5s, background-color 0.5s;
     overflow: hidden;
     z-index: 9999;
     border-right: 1px solid #ffffff2a;
 }
-
-/* rest of your CSS */
 
 .sidebar:hover {
     width: 200px;
@@ -23,21 +20,62 @@
 .sidebar ul {
     list-style-type: none;
     padding: 0;
+    margin: 0;
 }
 
 .sidebar li {
-    padding: 10px 0;
+    padding: 20px 0; /* Increase spacing between list items */
 }
 
 .sidebar li a {
     color: #fff;
     text-decoration: none;
+    display: flex;
+    align-items: center;
+    position: relative; /* For the active indicator */
+}
+
+.sidebar li a::before {
+    content: '';
+    position: absolute;
+    left: -10px;
+    width: 3px;
+    height: 100%;
+    background-color: transparent;
+    transition: background-color 0.3s;
+}
+
+.sidebar li a.active::before {
+    background-color: #fff; /* Color of the active indicator */
 }
 
 .sidebar-text {
     display: none; /* Hide text initially */
+    margin-left: 15px; /* Add more space between icon and text */
 }
 
 .sidebar:hover .sidebar-text {
     display: inline; /* Show text on hover */
+}
+
+.sub-menu {
+    padding-left: 30px; /* Increase the indent for sub-menu items */
+    display: none;
+}
+
+.sidebar:hover .sub-menu {
+    display: block; /* Show sub-menu on hover */
+}
+
+
+.sub-menu li {
+    padding: 5px 0; /* Spacing for sub-menu items */
+    margin-left: 30px;
+    font-size: 12px; /* Adjust this value to make the text smaller */
+}
+
+.sidebar-bottom {
+    position: absolute;
+    bottom: 50px;
+    width: 100%;
 }
