--- a/frontend/src/Styling_Pages/Private_Pages/Investments_Summary.css
+++ b/frontend/src/Styling_Pages/Private_Pages/Investments_Summary.css
@@ -1,7 +1,8 @@
 .investments-summary {
-    width: 80%;
+    width: 100%;
     margin: auto;
     padding: 20px;
+    background-color: #121212;
 }
 
 .investments-summary div {
