--- a/frontend/src/Styling_Pages/Private_Pages/Watchlist.css
+++ b/frontend/src/Styling_Pages/Private_Pages/Watchlist.css
@@ -1,7 +1,7 @@
 :root {
-  --sidebar-width: 56px;
+  --sidebar-width: 90px;
   --right-margin: 0; /* Adjust as needed */
-  --right-margin-content: 20px;
+  --right-margin-content: 100px;
 }
 
 
@@ -10,12 +10,14 @@
   position: relative;
   width: 100%;
   height: 100vh; /* Full viewport height */
-  background-color: rgb(0, 0, 0);
+  background-color: #0A0B0D;
+  /*
   background-image: url('/src/Styling_Pages/Public_Pictures/Circle_Blur2.png'), url('/src/Styling_Pages/Public_Pictures/Circle_Blur1.png');
   background-size: 170%, 130%;
   background-attachment: fixed;
   background-repeat: no-repeat, no-repeat;
   background-position: center, center;
+  */
   /*background-image: url('/src/Styling_Pages/Public_Pictures/Circle_Blur2.png'), url('/src/Styling_Pages/Public_Pictures/Circle_Blur3.png');
   background-size: 250%, 130%;
   background-attachment: fixed;
@@ -47,6 +49,7 @@
   padding-right: var(--right-margin); /* Ensure content doesn't overlap scrollbar */
   margin-top: 77px;
 
+
 }
 
 .stock-and-widgets {
@@ -58,10 +61,10 @@
 
 .stock-watchlist {
   display: flex;
-  width: 62%;
+  width: 57%;
   background-color: transparent;
   margin: 0;
-  padding: 2px;
+  padding: 10px;
   margin-left: var(--sidebar-width);
 }
 
@@ -87,7 +90,7 @@
 
 .my-portfolio {
   margin-top: 2%;
-  width: 62%;
+  width: 57%;
   margin-left: var(--sidebar-width);
   padding: 2px;
   height: auto;
@@ -114,7 +117,7 @@
 .company-profile{
   padding-top: 1%;
   display: flex;
-  width: 62%;
+  width: 57%;
   background-color: transparent;
   margin: 0;
   margin-left: var(--sidebar-width);
@@ -125,13 +128,26 @@
 .key-metrics{
   padding-top: 1%;
   display: flex;
-  width: 62%;
+  width: 57%;
   background-color: transparent;
   margin: 0;
   margin-left: var(--sidebar-width);
   overflow-x:hidden;
-
 }
+
+
+
+.watchlist-news{
+  padding-top: 1%;
+  display: flex;
+  width: 57%;
+  background-color: transparent;
+  margin: 0;
+  margin-left: var(--sidebar-width);
+  overflow-x:hidden;
+}
+
+
 .inner-box2, .inner-box3 {
   width: 100%;
 }
