--- a/frontend/src/Styling_Pages/Public_Pages/Login_Page.css
+++ b/frontend/src/Styling_Pages/Public_Pages/Login_Page.css
@@ -1,6 +1,9 @@
 .form-container1 {
-    margin-top: 75px;
-    margin-left: 74px;
+    position: relative;
+    width: 100%;
+    height: 100vh; /* Full viewport height */
+    background-color: #0A0B0D;
+    margin-top: 67px;
 
 }
 
