--- a/frontend/src/Styling_Pages/Public_Pages/Signup_Page.css
+++ b/frontend/src/Styling_Pages/Public_Pages/Signup_Page.css
@@ -9,7 +9,8 @@
 /* Signup_Page.css */
 .signup-form-container {
     width: 300px;
-    margin: 0 auto;
+    margin-left: 100px;
+    margin-top: 100px;
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 5px;
